[Style] Fixing alignment between article name and dates

--- a/blog/articles/static/css/index.css
+++ b/blog/articles/static/css/index.css
@@ -47,5 +47,5 @@ body {
 }
 
 .dates li {
-    padding: 3px;
+    padding: 5px;
 }
